index small layout problems fixed

--- a/static/css/default-0.1.css
+++ b/static/css/default-0.1.css
@@ -207,8 +207,7 @@
   width:18px;
   height:18px;
   border-radius:10px;
-  border: solid 1px black;
-  background-color: black;
+  border: solid 1px rgba(0,0,0,0.5);
 }
 
 #tour .tour-separator {
